--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ act = {"start":"2020-07-12 22:55","end":"2020-07-12 23:15","stage":"Spiral Dome"
 act = {"start":"2020-07-12 23:40","end":"2020-07-13 00:45","stage":"Spiral Dome","act":"Tank us the Henge","video":"https://www.youtube.com/watch?v=BZaOTK9qed0"}
 
 act = {"start":"2020-07-11 09:15","end":"2020-07-11 09:55","stage":"Sacred Space","act":"Tai chi with David","video":"https://www.youtube.com/watch?v=iM-cekkSDP8"}
-act = {"start":"2020-07-12 10:05","end":"2020-07-12 10:45","stage":"Sacred Space","act":"Hawaii spaces","video":"https://www.bing.com/videos/search?q=You+tube+hawaii&docid=608033640830928974&mid=324CA88501076DB41BCB324CA88501076DB41BCB&view=detail&FORM=VIRE"}
+act = {"start":"2020-07-12 10:05","end":"2020-07-12 10:45","stage":"Sacred Space","act":"Hawaii spaces","video":"https://www.youtube.com/watch?v=zmrVMmBRMdE"}
 act = {"start":"2020-07-12 11:10","end":"2020-07-12 11:50","stage":"Sacred Space","act":"Hawaii sunrise","video":"https://www.youtube.com/watch?v=xDBMaAWtQHI"}
-act = {"start":"2020-07-12 12:05","end":"2020-07-12 12:45","stage":"Sacred Space","act":"Interview with shepheress","video":"https://www.bing.com/videos/search?q=interview+with++yorkshire+sherpperfess+you+tube&docid=608054046148199873&mid=D62A6B5729B912D7176DD62A6B5729B912D7176D&view=detail&FORM=VIRE"}
-act = {"start":"2020-07-12 13:10","end":"2020-07-12 13:50","stage":"Sacred Space","act":"Allucidnation","video":"https://www.bing.com/videos/search?q=youtub+Allucidnation&docid=608043785502526484&mid=BCF821C1777621C35A0BBCF821C1777621C35A0B&view=detail&FORM=VIRE"}
+act = {"start":"2020-07-12 12:05","end":"2020-07-12 12:45","stage":"Sacred Space","act":"Interview with shepheress","video":"https://www.youtube.com/watch?v=jyEylr9aygM"}
+act = {"start":"2020-07-12 13:10","end":"2020-07-12 13:50","stage":"Sacred Space","act":"Allucidnation","video":"https://www.youtube.com/watch?v=Rq-36xWPn-0"}
 act = {"start":"2020-07-12 14:30","end":"2020-07-12 15:10","stage":"Sacred Space","act":"This Mortal Coil","video":"https://www.youtube.com/watch?v=_Dvd6o0qqoY&list=PLlKKgwDIzfphGZ65ZdOI3CtQJFVI64_B9&index=7&t=0s"}
 act = {"start":"2020-07-12 16:00","end":"2020-07-12 16:45","stage":"Sacred Space","act":"Sinead O'connor","video":"https://www.youtube.com/watch?v=TdgHdasnEk8"}
 act = {"start":"2020-07-12 17:05","end":"2020-07-12 17:50","stage":"Sacred Space","act":"Hazel O'Connor","video":"https://www.youtube.com/watch?v=_ipkUpcNKps"}
