--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
     margin: 25px 50px 75px 100px;
 }
 
+/* https://markheath.net/post/customize-radio-button-css */
+.radio-toolbar input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio-toolbar label {
+    display: inline-block;
+    background-color: #ddd;
+    padding: 10px 20px;
+    font-family: sans-serif, Arial;
+    font-size: 16px;
+    border: 2px solid #444;
+    border-radius: 4px;
+}
+
+.radio-toolbar input[type="radio"]:checked + label {
+    background-color:#bfb;
+    border-color: #4c4;
+}
+
+.radio-toolbar input[type="radio"]:focus + label {
+    border: 2px dashed #444;
+}
+
     </style>
     <script>
 
@@ -60,7 +86,8 @@ function getNow(){
     
     if (document.getElementById("asiftoday").checked == true) {
         var asif_el = document.getElementById("daySelect");
-        var asif = asif_el.options[asif_el.selectedIndex].value.split('-');
+        //var asif = asif_el.options[asif_el.selectedIndex].value.split('-');
+        var asif = document.querySelector('input[name="day_buttons"]:checked').value.split('-');
         var asif_date = asif[0]+'-'+asif[1]+'-'+asif[2];
         console.log("asif date is"); console.log(asif_date);
         var asif_time = nowish.getHours()+':'+nowish.getMinutes();
@@ -82,7 +109,9 @@ function setVideo(){
     var starting = null;
 
     var stage_el = document.getElementById("stageSelect");
-    var stage = stage_el.options[stage_el.selectedIndex].value;
+    //var stage = stage_el.options[stage_el.selectedIndex].value;
+
+    var stage = document.querySelector('input[name="stage_buttons"]:checked').value;
 
     // find what's on by iterating till we find something
     for (var act of acts) {
@@ -174,13 +203,49 @@ console.log(el.getElementById( 'jq-input1' ).value);
 //alert(days)
 //alert(stages)
 
+var divUid = 0;
+function newId(stub='id_'){
+    divUid = divUid +1;
+    return stub+divUid;
+}
+function createRadio(parent_id, radio_id, radioName, vals){
+    var parent = document.getElementById(parent_id);
+    var radio_div = document.createElement("div");
+    radio_div.id = radio_id;
+    radio_div.className = "radio-toolbar";
+
+    //Create and append the options
+    for (var i = 0; i < vals.length; i++) {
+        var input = document.createElement("input");
+        input.setAttribute('type', 'radio');
+        input.id = newId();
+        input.name = radioName;
+        input.value = vals[i];
+        input.onclick = function() {setVideo();};
+        if (i == 0) input.checked = true;
+
+        var label = document.createElement("label");
+        label.setAttribute('for', input.id);
+        label.setAttribute('name', vals[i]);
+        label.innerHTML = vals[i];
+        radio_div.appendChild(input);
+        radio_div.appendChild(label);
+    }
+
+    parent.appendChild(radio_div);
+
+}
+
 function createSelector(parent_id, selector_id, vals){
     var parent = document.getElementById(parent_id);
     //Create and append select list
     var selector = document.createElement("select");
-    selector.multiple = true;
-    selector.id = selector_id;
-    selector.className = "formSelect";
+    selector.setAttribute('multiple',  true);
+    //selector.multiple = true;
+    selector.setAttribute('id',  selector_id)
+    //selector.id = selector_id;
+    selector.setAttribute('class',  "formSelect")
+    //selector.className = "formSelect";
 
     //Create and append the options
     for (var i = 0; i < vals.length; i++) {
@@ -242,10 +307,12 @@ function setUp(items) {
     }
 
     // Add days
-    createSelector('daySelect_div', "daySelect", days);
+    //createSelector('daySelect_div', "daySelect", days);
+    createRadio('daySelect_div', 'daySelect', 'day_buttons', days);
 
     // Add stages
-    createSelector('stageSelect_div', 'stageSelect', stages);
+    //createSelector('stageSelect_div', 'stageSelect', stages);
+    createRadio('stageSelect_div', 'stageSelect', 'stage_buttons', stages);
 }
 
 function getItems() {
@@ -255,10 +322,10 @@ function getItems() {
         items = xhr.responseText;
         setUp(items);
 
-        document.getElementById('daySelect_div').addEventListener("change", setVideo);
-        document.getElementById('stageSelect_div').addEventListener("change", setVideo);
-        document.getElementById('daySelect_div').addEventListener("click", setVideo);
-        document.getElementById('stageSelect_div').addEventListener("click", setVideo);
+        //document.getElementById('daySelect_div').addEventListener("change", setVideo);
+        //document.getElementById('stageSelect_div').addEventListener("change", setVideo);
+        //document.getElementById('daySelect_div').addEventListener("click", setVideo);
+        //document.getElementById('stageSelect_div').addEventListener("click", setVideo);
 
         setVideo();
     }
