Add various psychedelic fonts
Fonts downloaded from https://www.fontspace.com/category/psychedelic, listed as free for any use, no license against use in download zip

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>In Lieu Of Missed Festivals, 2020</title>
-
+    <link rel="stylesheet" href="font_style.css" type="text/css" media="all" />
     <style>
 
 .formSelect {
@@ -70,6 +70,25 @@
 
 .radio-toolbar input[type="radio"]:focus + label {
     border: 2px dashed #444;
+}
+
+.fishinthebathroom {
+font-family: 'Fishinthebathroom';
+font-size: 32;
+}
+.hippiemovement{
+    font-family: 'HippieMovement';
+    font-size: 32;
+}
+
+.psychedeliahm{
+    font-family: 'PsychedeliaHM';
+    font-size: 32;
+}
+
+.mamaregular{
+    font-family: 'MamaRegular';
+    font-size: 32;
 }
 
     </style>
